# school_monitor

./: CMakeLists.txt  Makefile  README.md  mqtt_test.ino
main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.cpp
main/bme/: bme_setup.c  bme_setup.h
main/bme280/: bme280_setup.c  bme280_setup.h
main/dsm/: dsm_setup.c  dsm_setup.h
main/dsm501a/: dsm501a_setup.c  dsm501a_setup.cpp  dsm501a_setup.h
main/inmp/: inmp_setup.cpp  inmp_setup.h
main/inmp441/: inmp441_setup.cpp  inmp441_setup.h
main/misc/: global_data.c  global_data.cpp  global_data.h  mqtt_setup.c  mqtt_setup.h  ota_setup.c  ota_setup.h  wifi_setup.c  wifi_setup.h
main/neo/: neo_setup.c  neo_setup.h
main/neo6m/: neo6m_setup.c  neo6m_setup.cpp  neo6m_setup.h
