idf_component_register(SRCS "main.c"
                            "misc/global_data.c"
                            "misc/wifi_setup.c"
                            "misc/mqtt_setup.c"
                            "misc/ota_setup.c"
                            "bme/bme280.c"
                            "bme/bme_setup.c"
                            "dsm/dsm_setup.c"
                            "inmp/inmp_setup.cpp"
                            "neo/neo_setup.c"
                    INCLUDE_DIRS "." "bme" "dsm" "inmp" "misc" "neo"
                    EMBED_TXTFILES ${project_dir}/server_certs/ca_cert.pem)
